--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "firebase": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.5",
     "nodemailer": "^6.10.0",
