--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,12 +22,14 @@
     "notifyjs-browser": "^0.4.2",
     "process": "^0.11.10",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.15.1",
     "styled-components": "^6.1.13",
     "sweetalert": "^2.1.2"
   },
