--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.7",
     "emailjs-com": "^3.2.0",
     "jquery": "^3.7.1",
+    "lucide-react": "^0.475.0",
     "notifyjs": "^3.0.0",
     "notifyjs-browser": "^0.4.2",
     "process": "^0.11.10",
